--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
             <div class="author-info">
                 <p><strong>Trabajo de Fin de Grado</strong></p>
                 <p>Desarrollo de Videojuegos</p>
-                <p><strong>[Tu Nombre]</strong> | [Tu Universidad] | 2024</p>
+                <p><strong>Nixon Correa</strong> | CITM - UPC | 2025</p>
             </div>
 
             <div class="badges">
@@ -477,7 +477,7 @@
 
                 <div class="gallery-item fade-in">
                     <div class="gallery-placeholder">
-                        editor_interface.png
+                        editor/editor_interface.png
                     </div>
                     <div class="gallery-caption">
                         <h4 class="gallery-title">Editor Personalizado</h4>
@@ -567,8 +567,7 @@
                 <div class="footer-section">
                     <h4>Enlaces</h4>
                     <a href="https://github.com/tu-usuario/fracture-tool">GitHub Repository</a>
-                    <a href="docs/manual.pdf">Manual PDF</a>
-                    <a href="mailto:tu.email@universidad.edu">Contacto</a>
+                    <a href="docs/Manual de Fracture Tool.pdf">Manual PDF</a>
                 </div>
                 
                 <div class="footer-section">
