--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
 
                 <div class="gallery-item fade-in">
                     <div class="gallery-placeholder">
-                        editor/editor_interface.png
+                        images/editor_interface.png
                     </div>
                     <div class="gallery-caption">
                         <h4 class="gallery-title">Editor Personalizado</h4>
