--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
 
                 <div class="gallery-item fade-in">
                     <div class="gallery-placeholder">
-                        images/editor_interface.png
+                        <img src="images/editor_interface.png" alt="Editor Interface.png Demo" style="width: 100%; height: 300px; object-fit: cover;">
                     </div>
                     <div class="gallery-caption">
                         <h4 class="gallery-title">Editor Personalizado</h4>
