--- a/index.html
+++ b/index.html
@@ -405,21 +405,21 @@
             <div class="demo-showcase">
                 <div class="demo-item fade-in">
                     <div class="media-placeholder">
-                        voronoi_fracture_demo.gif
+                        objeto_rompiendose.gif
                     </div>
                     <div class="demo-content">
-                        <h3 class="demo-title">Algoritmo Voronoi en Acción</h3>
-                        <p class="demo-description">Fragmentación orgánica y natural usando diagramas de Voronoi. Ideal para rocas, madera y objetos con formas irregulares. El algoritmo principal del sistema.</p>
+                        <h3 class="demo-title">Fractura en Tiempo Real</h3>
+                        <p class="demo-description">Demostración de la fragmentación 3D en acción. El objeto se rompe dinámicamente creando fragmentos realistas con física aplicada.</p>
                     </div>
                 </div>
 
                 <div class="demo-item fade-in">
                     <div class="media-placeholder">
-                        algorithms_comparison.gif
+                        editor_demo.gif
                     </div>
                     <div class="demo-content">
-                        <h3 class="demo-title">Comparativa de Algoritmos</h3>
-                        <p class="demo-description">Comparación visual de los 5 algoritmos implementados: Voronoi, Radial, Grid, Random Planes y Simple. Cada uno con características únicas.</p>
+                        <h3 class="demo-title">Editor Personalizado</h3>
+                        <p class="demo-description">Interfaz integrada en Unity Inspector con controles específicos, modo preview y configuración en tiempo real de todos los parámetros.</p>
                     </div>
                 </div>
             </div>
@@ -442,12 +442,6 @@
                     <div class="feature-icon">M</div>
                     <h3 class="feature-title">Sistema de Materiales</h3>
                     <p>Presets realistas para Madera, Piedra, Vidrio y Metal con propiedades físicas auténticas. Configuración personalizada disponible.</p>
-                </div>
-
-                <div class="feature-card fade-in">
-                    <div class="feature-icon">UV</div>
-                    <h3 class="feature-title">Corrección UV</h3>
-                    <p>6 métodos automáticos de corrección de coordenadas UV para mantener la calidad visual de texturas en todos los fragmentos.</p>
                 </div>
 
                 <div class="feature-card fade-in">
@@ -477,7 +471,7 @@
 
                 <div class="gallery-item fade-in">
                     <div class="gallery-placeholder">
-                        <img src="images/editor_interface.png" alt="Editor Interface.png Demo" style="width: 100%; height: 300px; object-fit: cover;">
+                        editor_interface.png
                     </div>
                     <div class="gallery-caption">
                         <h4 class="gallery-title">Editor Personalizado</h4>
@@ -555,7 +549,7 @@
                     </div>
                 </div>
 
-                <a href="https://github.com/tu-usuario/fracture-tool" class="btn">Ver en GitHub</a>
+                <a href="https://github.com/Nixonbit3/FractureTool" class="btn">Ver en GitHub</a>
             </div>
         </div>
     </section>
@@ -566,7 +560,7 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <h4>Enlaces</h4>
-                    <a href="https://github.com/tu-usuario/fracture-tool">GitHub Repository</a>
+                    <a href="https://github.com/Nixonbit3/FractureTool">GitHub Repository</a>
                     <a href="docs/Manual de Fracture Tool.pdf">Manual PDF</a>
                 </div>
                 
@@ -580,7 +574,7 @@
             
             <div class="footer-bottom">
                 <p><strong>Trabajo de Fin de Grado</strong> - Desarrollo de Videojuegos</p>
-                <p>[Tu Nombre] | [Tu Universidad] | 2024</p>
+                <p>Nixon Correa | CITM - UPC | 2025</p>
             </div>
         </div>
     </footer>
