--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
 
                 <div class="demo-item fade-in">
                     <div class="media-placeholder">
-                        editor_demo.gif
+                        <img src="images/editor_interface.gif" alt="Editor_Interface" style="width: 100%; height: 300px; object-fit: cover;">
                     </div>
                     <div class="demo-content">
                         <h3 class="demo-title">Editor Personalizado</h3>
@@ -471,7 +471,7 @@
 
                 <div class="gallery-item fade-in">
                     <div class="gallery-placeholder">
-                        editor_interface.png
+                        <img src="images/editor_interface.png" alt="Editor_Interface" style="width: 100%; height: 300px; object-fit: cover;">
                     </div>
                     <div class="gallery-caption">
                         <h4 class="gallery-title">Editor Personalizado</h4>
