--- a/index.html
+++ b/index.html
@@ -392,7 +392,12 @@
                 <span class="badge">Sistema de Materiales</span>
                 <span class="badge">Editor Personalizado</span>
             </div>
-
+            <div style="margin: 2rem 0;">
+                <video width="100%" height="400" controls style="border-radius: 12px; max-width: 800px;">
+                    <source src="videos/fracture_tool_trailer.mp4" type="video/mp4">
+                    Tu navegador no soporta video HTML5.
+                </video>
+            </div>
             <a href="#demo" class="btn">Ver Demostración</a>
         </div>
     </header>
