--- a/index.html
+++ b/index.html
@@ -554,7 +554,7 @@
                     </div>
                 </div>
 
-               <a href="packages/FractureToolDemo.unitypackage" class="btn">Descargar Package</a>
+               <a href="https://github.com/Nixonbit3/FractureTool/releases/latest" class="btn">Descargar Package</a>
             </div>
         </div>
     </section>
