--- a/index.html
+++ b/index.html
@@ -558,6 +558,10 @@
                         <h3>Añadir y Fracturar</h3>
                         <p>Añade el componente "FractureController" y configura la herramienta</p>
                     </div>
+
+                    </div>
+                      <a href="https://github.com/Nixonbit3/FractureTool/releases/latest" class="btn">Descargar Package</a>
+                    </div>
                 </div>
     </section>
 
