--- a/index.html
+++ b/index.html
@@ -506,7 +506,8 @@
 
                 <div class="gallery-item fade-in">
                     <div class="gallery-placeholder">
-                        uv_correction_comparison.png
+                        
+                        <img src="images/Uvs.png" alt="UVs antes y despues" style="width: 100%; height: 300px; object-fit: cover;">
                     </div>
                     <div class="gallery-caption">
                         <h4 class="gallery-title">Corrección UV</h4>
