--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
             <div class="gallery-grid">
                 <div class="gallery-item fade-in">
                     <div class="gallery-placeholder">
-                        material_presets_demo.gif
+                        <img src="images/presets.png" alt="Presets" style="width: 100%; height: 300px; object-fit: cover;">
                     </div>
                     <div class="gallery-caption">
                         <h4 class="gallery-title">Presets de Materiales</h4>
