--- a/index.html
+++ b/index.html
@@ -496,7 +496,8 @@
 
                 <div class="gallery-item fade-in">
                     <div class="gallery-placeholder">
-                        grid_fracture_demo.gif
+
+                        <img src="images/grid.gif" alt="Grid" style="width: 100%; height: 300px; object-fit: cover;"> 
                     </div>
                     <div class="gallery-caption">
                         <h4 class="gallery-title">Fractura Grid</h4>
