--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@
 
                 <div class="gallery-item fade-in">
                     <div class="gallery-placeholder">
-                        physics_showcase.gif
+                        <img src="images/fisica.gif" alt="Fisica" style="width: 100%; height: 300px; object-fit: cover;"> 
                     </div>
                     <div class="gallery-caption">
                         <h4 class="gallery-title">Sistema Físico</h4>
