--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
 
                 <div class="gallery-item fade-in">
                     <div class="gallery-placeholder">
-                        radial_fracture_demo.gif
+                        <img src="images/radial.gif" alt="Radial Mode" style="width: 100%; height: 300px; object-fit: cover;">
                     </div>
                     <div class="gallery-caption">
                         <h4 class="gallery-title">Fractura Radial</h4>
