--- a/index.html
+++ b/index.html
@@ -575,7 +575,7 @@
                     <h4>Enlaces</h4>
                     <a href="https://github.com/Nixonbit3/FractureTool">GitHub Repository</a>
                     <a href="docs/Manual de Fracture Tool.pdf">Manual PDF</a>
-                    <a href="https://linkedin.com/in/tu-perfil-linkedin">LinkedIn - Nixon Correa</a>
+                    <a href="www.linkedin.com/in/nixon-correa-818388244">LinkedIn - Nixon Correa</a>
                 </div>
                 
                 <div class="footer-section">
