--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
             <div class="demo-showcase">
                 <div class="demo-item fade-in">
                     <div class="media-placeholder">
-                        objeto_rompiendose.gif
+                        <img src="images/realtime.gif" alt="Editor_Interface" style="width: 100%; height: 300px; object-fit: cover;">
                     </div>
                     <div class="demo-content">
                         <h3 class="demo-title">Fractura en Tiempo Real</h3>
